--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ Latest commit 14f8a8b on Apr 11, 2020
 138 lines (112 sloc)  1.99 KB
    
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*/__pycache__/
 *.py[cod]
 *$py.class
 
